--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -26,4 +26,5 @@ builds:
 
 publishers:
   - name: my-publisher
-    cmd: echo '{ .Version }} {{ abs .ArtifactPath }}'
+    cmd: echo '{{ .Version }} {{ abs .ArtifactPath }}' > demo.txt
+    dir: demo
