--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -26,5 +26,4 @@ builds:
 
 publishers:
   - name: my-publisher
-    cmd: pwd && curl -d "{{ .Version }} {{ abs .ArtifactPath }} {{ .ReleaseNotes }}" -X POST http://localhost:3333
-    dir: demo
+    cmd: node publisher.js "{{ .Version }}" "{{ abs .ArtifactPath }}" "{{ .Os }}" "{{ .Arch }}"
