--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,5 +32,6 @@ jobs:
         with:
           node-version: 18
       - name: run
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx -y goreleaser-npm-publisher publish --clear --project .
-        
