--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,8 +30,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
-      - name: run
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx -y goreleaser-npm-publisher publish --clear --project . --builder "go-package"
+      - name: goreleaser-npm-publisher publish
+        run: npx -y goreleaser-npm-publisher publish --clear --project . --builder "go-package" --prefix "@wserdtryftvubhijnokmpl"
