--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,3 +36,5 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: goreleaser-npm-publisher publish
         run: npx -y goreleaser-npm-publisher publish --clear --project . --builder "go-package" --prefix "@wserdtryftvubhijnokmpl"
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
