--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,6 +33,6 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
       - name: goreleaser-npm-publisher publish
-        run: npx -y goreleaser-npm-publisher publish --clear --project . --builder "go-package" --prefix "@wserdtryftvubhijnokmpl"
+        run: npx -y goreleaser-npm-publisher@latest publish --clear --project . --builder "go-package" --prefix "@wserdtryftvubhijnokmpl"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
