--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,16 +11,15 @@ jobs:
   dfljksdjlkfdslk:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      -
-        name: Set up Go
+
+      - name: Set up Go
         uses: actions/setup-go@v4
-      -
-        name: Run GoReleaser
+
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
           distribution: goreleaser
@@ -28,10 +27,17 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Test Action
+        uses: evg4b/goreleaser-npm-publisher-action@latest
+        with:
+          milliseconds: 1000
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
+
       - name: goreleaser-npm-publisher publish
         run: npx -y goreleaser-npm-publisher@latest publish --clear --project . --builder "go-package" --prefix "@wserdtryftvubhijnokmpl"
         env:
