--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Test Action
-        uses: evg4b/goreleaser-npm-publisher-action@debug
+        uses: evg4b/goreleaser-npm-publisher-action@test-repo
         with:
           milliseconds: 1000
 
